--- a/provisioning/webserver.yml
+++ b/provisioning/webserver.yml
@@ -1,5 +1,5 @@
 - name: Configure web server with nginx and php-fpm
-  hosts: my-project-web-server
+  hosts: vagrant-web-server
   sudo: True
   roles:
     - role: nginx
